Minitrip site con mejoras

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!----------MINITRIP BY PATRICIA GONZALEZ------------------>
 <!DOCTYPE html>
 <html>
+<link href="https://fonts.googleapis.com/css?family=Abel|Nunito|Satisfy" rel="stylesheet">
 <link rel="icon" type="image.png" href="favicon.png" sizes="64x64">
 <link rel="stylesheet" type="text/css" href="minitrip.css">
 
@@ -166,19 +167,22 @@
         <h1>No esperes a las vacaciones! Aprovecha estas súper mini-escapadas!</h1>
     </div>
     <!---------------------------CAJAS--------------------------->
+    <span class="bloque">
     <section>
+        <a href="oferta.html">
         <div class="caja">
             <img src="casas/inside1.jpg" />
             <img class="top" src="casas/tiny1.jpg"/>
        </div>
             <article>
-                <img class="icono" src="image/montaña.png">
+                <img class="iconomar" src="image/lago.png">
                 <img class="icon" src="image/desayuno.png">
                 <img class="iconomar" src="image/vino.png">
                 <h4>Relájate en una minicasa en el Montseny de Barcelona<br />
-                para dos personas con copa de bienvenida!<strong>60€</strong></h4>
+                con vistas al Lago Santa Fe y copa de bienvenida!<strong>60€</strong></h4>
                 <h6>La noche para dos personas</h6>
             </article>
+        </a>
     </section>
     <section>
         <div class="caja">
@@ -247,38 +251,38 @@
                 <h6>La noche para dos personas</h6>
             </article>
     </section>
+</span>
     <!-------------------------FOOTER--------------------------->
     <footer>
-        
         <div class="store">
             <img class="app" src="image/appstore.png">
             <img class="play" src="image/playstore.png">
         </div>
-        <div class="pie">
-        <div class="contacto">
-            <ul>
-                <li><a href="#">Podemos ayudarte?</a></li>
-                <li><a href="#">Preguntas - Respuestas</a></li>
-                <li><a href="#">Sobre nosotros</a></li>
-            </ul>
-        <div class="call"> Llámanos:<br />
-            (+34) 900 900 900  &nbsp;(+34) 900 900 900
-        </div>
-        </div>
-        <div class="pay">
-            <p>Medios de Pago:</p>
-            <img class="pago" src="image/pagos.png">
-        </div>
-        <div class="redes">
-            <p>Síguenos en las redes!</p>
-            <img class="iconored" src="image/face.png">
-            <img class="iconored" src="image/insta.png">
-            <img class="iconored" src="image/tw.png">
-            <img class="iconored" src="image/trip.png">
-            <p>Quiéres recibir descuentos increíbles? &nbsp;<a href="#">Suscríbete al Newsletter!</a></p>
-        </div>
-    </div>
-            <h4>&copy 2018 by Minitrip. Todos los derechos reservados.</h4>
+            <div class="pie">
+                <div class="contacto">
+                    <ul>
+                        <li><a href="#">Podemos ayudarte?</a></li>
+                        <li><a href="#">Preguntas - Respuestas</a></li>
+                        <li><a href="#">Sobre nosotros</a></li>
+                    </ul>
+                    <div class="call"> Llámanos:<br />
+                        (+34) 900 900 900 &nbsp;(+34) 900 900 900
+                    </div>
+                </div>
+                <div class="pay">
+                    <p>Medios de Pago:</p>
+                    <img class="pago" src="image/pagos.png">
+                </div>
+                    <div class="redes">
+                        <p>Síguenos en las redes!</p>
+                        <img class="iconored" src="image/face.png">
+                        <img class="iconored" src="image/insta.png">
+                        <img class="iconored" src="image/tw.png">
+                        <img class="iconored" src="image/trip.png">
+                        <p>Quiéres recibir descuentos increíbles? &nbsp;<a href="#">Suscríbete al Newsletter!</a></p>
+                    </div>
+            </div>
+                <h4>&copy 2018 by Minitrip. Todos los derechos reservados.</h4>
     </footer>
 </body>
 
