--- a/oferta.html
+++ b/oferta.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <a href="minitrip.html"><img src="image/logo.svg" alt=""></a>
+        <a href="index.html"><img src="image/logo.svg" alt=""></a>
         <ul class="barra">
             <li><h4><a href="#">Contactanos</a></h4>
             </li>
